discussion/kv_engine/178663/178663_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-52953: Use mutation_mem_threshold in ReplicationThrottleEP::hasSomeMemory

We are removing replication_throttle_threshold by extending the usage
of mutation_mem_threshold. This is the final step.

Tests are also converted to use mutation_mem_threshold.
replication_throttle_threshold is now unused and will be removed in a
follow-up change.

Change-Id: I2ead6fc2680ca8e212db1f5b5d30e826f21580b4

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Paolo Cocchi
Date: 2022-08-09 13:22:18.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-08-09 13:28:38.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/48211/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/48211/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/40502/ : ABORTED

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/replicationthrottle.cc:31:42:
error: member access into incomplete type "const KVBucket"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/40502/ )

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/40502/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/22339/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/22339/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/20511/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/20511/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/29643/ : ABORTED

Clang linker error: linker command failed due to signal (use -v to see invocation) ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/29643/ )

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/29643/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19332/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/replicationthrottle.cc:31:42: error: member access into incomplete type "const KVBucket" [clang-diagnostic-error]
    return memoryUsed <= maxSize * bucket->getMutationMemRatio();
                                         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/ep_engine.h:45:7: note: forward declaration of "KVBucket"
class KVBucket;
      ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19332/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/replicationthrottle.cc:31:42:
error: member access into incomplete type "const KVBucket" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19332/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/9119/ : FAILURE

Compile error at [2022-08-09T13:27:13.471Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master@2/kv_engine/engines/ep/src/replicationthrottle.cc:31:42:
error: invalid use of incomplete type ?const class KVBucket?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/9119/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/21266/ : FAILURE

Compile error at [2022-08-09T13:24:23.239Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/engines/ep/src/replicationthrottle.cc:31:42:
error: invalid use of incomplete type ?const class KVBucket?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/21266/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/21618/ : FAILURE

Compile error at [2022-08-09T13:24:45.089Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master/kv_engine/engines/ep/src/replicationthrottle.cc:31:42:
error: invalid use of incomplete type ?const class KVBucket?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/21618/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/18544/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/9022/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
